<resources>
    <string name="app_name">BMI App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi1">BMI Calculator </string>
    <string name="bmi2">Weight(kg) </string>
    <string name="bmi3">Enter the Weight </string>
    <string name="bmi4">Height(cm) </string>
    <string name="bmi5">Enter the Height </string>
    <string name="bmi6">Calculate </string>
</resources>