<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="420dp"
        android:layout_height="59dp"
        android:background="#3F51B5"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bmi1"
        android:textColor="#ffff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="42dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bmi2"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/add2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add2"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/bmi3"
        android:inputType="number"
        android:textColor="#003CD4"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="177dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bmi4"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/add1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add1"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/bmi5"
        android:inputType="number"
        android:textColor="#003CD4"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:background="#2196F3"
        android:text="@string/bmi6"
        app:layout_constraintBottom_toTopOf="@+id/val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/val"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="#F6F6F6"
        android:gravity="center_horizontal|center_vertical"
        android:text="Value"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="191dp"
        android:src="@drawable/health1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>